--- a/auth/package.json
+++ b/auth/package.json
@@ -15,7 +15,11 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.10.0",
     "global": "^4.4.0",
+    "mongoose": "5.10.19",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.10.4"
   }
 }
