--- a/auth/package.json
+++ b/auth/package.json
@@ -21,6 +21,8 @@
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mongoose": "^5.10.4",
+    "@vladtickets/common": "^1.0.6",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -29,8 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.10.19",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.3",
-    "@types/mongoose": "^5.10.4"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
