--- a/tickets/package.json
+++ b/tickets/package.json
@@ -22,7 +22,7 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
-    "@vladtickets/common": "^1.0.6",
+    "@vladtickets/common": "^1.0.9",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -30,6 +30,7 @@
     "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.10.19",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   },
