--- a/.github/workflows/test-auth.yml
+++ b/.github/workflows/test-auth.yml
@@ -1,8 +1,10 @@
 name: test-auth
 
 on:
-  pull_request
-  
+  pull_request:
+    paths:
+      - "auth/**"
+
 jobs:
   build:
     runs-on: ubuntu-latest
